tests/compile_fail/filters_incompatible_root_type.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/filters_incompatible_root_type.rs:36:17
   |
36 |         |_path| address_city_path, // This path has Root=Company, but builder expects Root=User
   |                 ^^^^^^^^^^^^^^^^^ expected `Path<_, _, User>`, found `Path<City, Address, Company>`
   |
   = note: expected struct `nessus::Path<_, _, User>`
              found struct `nessus::Path<City, Address, Company>`
